refactor: gradle files